# Copyright © 2022 Scour Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_BOOST_1_0.txt, and LICENSE_MIT.txt).

[package]
name = "scour"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "A fuzzy search algorithm"
repository = "https://github.com/ardaku/scour"
documentation = "https://docs.rs/scour"
homepage = "https://github.com/ardaku/scour/blob/stable/CHANGELOG.md"
include = ["README.md", "src/*"]
categories = [
    "algorithms",
    "filesystem",
    "text-processing",
    "internationalization",
]
keywords = ["fuzzy", "search", "match", "ftw", "weighted"]
readme = "README.md"
rust-version = "1.60"
